--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,8 @@
     <string name="entrante7">Se que puede sonar muy raro y puede que a muchos la idea de combinar anchoas con leche condensada le produzca una cierta (llamémosle así) intranquilidad, pero una vez superada la barrera psicológica comprobarán que la tosta de anchoas con leche condensada es un bocado exquisito.
         \n\n
         \n\n</string>
+
+    <string name="funciona">Al momento de descargar la aplicacion de veras de registrarte con una cuenta, para despues selecionar en el botón de pedir comidaque al instante te mandara a seleccionar el restaurante que estas visitando, para despues escanear el código QR para saber en que mesa estas, y así poder pedir la comida y que te la lleven a tu lugar
+        \n\n
+        \n\n</string>
 </resources>
